syntax = "proto3";

option java_package = "com.taskable.protobufs";
option java_outer_classname = "ClassroomProto";

import "persistence.proto";

message CreateClassRequest {
  string class_name = 1;
  string class_desc = 2;
  string timestamp = 3;
}

message GetClassesResponse {
  repeated GetClassResponse responses = 1;
}

message GetClassResponse {
  Classroom classroom = 1;
  string role = 2;
}

message AddMembersRequest {
  repeated string user_emails = 1;
}

message AddMembersResponse {
  repeated string invalid_emails = 1;
}

message GetMembersResponse {
  repeated ClassroomMember class_members = 1;
}

message UpdateMemberRoleRequest {
  string role = 1;
}

message UpdateClassRequest {
  string class_name = 1;
  string class_desc = 2;
  bool archived = 3;
}


