syntax = "proto3";

option java_package = "com.taskable.protobufs";
option java_outer_classname = "TaskProto";
import "persistence.proto";

// TASKS Reqs
message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string color = 3;
}

message CreateTaskResponse {
  int32 id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message GetTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  optional string title = 3;
  optional string description = 4;
  optional string color = 5;
}

// Subtasks Reqs
message CreateSubtaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
  string priority = 4;
  string start = 5;
  string end = 6;
}

message CreateSubtaskResponse {
  int32 id = 1;
}

message GetSubtaskResponse {
  Subtask subtask = 1;
  repeated int32 assignee_ids = 2;
}

message GetSubtasksResponse {
  repeated GetSubtaskResponse subtaskResponses = 1;
}

message UpdateSubtaskRequest {
  optional int32 task_id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string status = 4;
  optional string priority = 5;
  optional string start = 6;
  optional string end = 7;
}

message AssignToSubtaskRequest {
  int32 user_id = 1;
}

// Comments
message CreateCommentRequest {
  string comment = 1;
  string created_date = 2;
}

message CreateCommentResponse {
  int32 id = 1;
}

message GetCommentResponse {
  Comment comment = 1;
}

message GetCommentsResponse {
  repeated Comment comments = 2;
}

message UpdateCommentRequest {
  string comment = 1;
}